@@ -3,13 +3,16 @@ plugins {
 	id "com.modrinth.minotaur" version "2.+"
 	id "org.jetbrains.gradle.plugin.idea-ext" version "1.1.3"
 	id 'org.quiltmc.gradle.licenser' version '1.+'
-	id 'fabric-loom' version '1.0-SNAPSHOT'
-	id 'io.github.juuxel.loom-quiltflower' version '1.8.+'
+	id 'fabric-loom' version '1.2-SNAPSHOT'
+	id 'io.github.juuxel.loom-quiltflower' version '1.9.+'
 }
 
-archivesBaseName = project.archives_base_name
 version = "$mod_version+build.$build_number-$project.minecraft_version"
 group = project.maven_group
+
+base {
+	archivesName = project.archives_base_name
+}
 
 loom {
 	accessWidenerPath = file("src/main/resources/vampirelib.accesswidener")
@@ -17,7 +20,7 @@ loom {
 	runs {
 		datagenClient {
 			client()
-			name "Data Generation Client"
+			name 'Data Generation Client'
 			vmArg "-Dfabric-api.datagen"
 			vmArg "-Dfabric-api.datagen.output-dir=${file("src/main/generated")}"
 			vmArg "-Dfabric-api.datagen.existing-dir=${file("src/main/resources")}"
@@ -62,16 +65,13 @@ dependencies {
 	minecraft libs.minecraft
 	mappings loom.layered {
 		it.mappings("org.quiltmc:quilt-mappings:${libs.versions.quilt.mappings.get()}:intermediary-v2")
-		it.parchment("org.parchmentmc.data:parchment-1.19.3:${libs.versions.parchment.get()}@zip")
+		it.parchment("org.parchmentmc.data:parchment-1.19.4:${libs.versions.parchment.get()}@zip")
 		it.officialMojangMappings()
 	}
 
 	modImplementation libs.fabric.loader
 
-	modImplementation libs.bundles.fabric
-
-	modApi(libs.clothconfig)
-	include(libs.clothconfig)
+	modImplementation (libs.fabric.api)
 
 	modImplementation(libs.terraformwoodapi)
 	include(libs.terraformwoodapi)
@@ -94,11 +94,6 @@ java {
 tasks.withType(JavaCompile).configureEach {
 	it.options.release = 17
 	it.options.encoding = 'UTF-8'
-	it.options.compilerArgs += "--enable-preview"
-}
-
-tasks.withType(JavaExec) {
-//	jvmArgs += "--enable-preview"
 }
 
 compileJava {
@@ -108,7 +103,7 @@ compileJava {
 jar {
 	from('LICENSE') {
 		rename {
-			"${it}_$archivesBaseName"
+			"${it}_${base.archivesName.get()}"
 		}
 	}
 }
@@ -147,7 +142,7 @@ modrinth {
 	versionNumber = project.version
 	versionType = this.getVersionType()
 	uploadFile = tasks.remapJar
-	gameVersions = ["1.19.4-rc3"/*, "1.19.4"*/]
+	gameVersions = ["1.19.4"]
 	loaders = ["fabric"]
 	dependencies {
 		required.project("fabric-api")
